; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/char/extr_vmur.c_urdev_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/char/extr_vmur.c_urdev_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.urdev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"urdev_free: %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.urdev*)* @urdev_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @urdev_free(%struct.urdev* %0) #0 {
  %2 = alloca %struct.urdev*, align 8
  store %struct.urdev* %0, %struct.urdev** %2, align 8
  %3 = load %struct.urdev*, %struct.urdev** %2, align 8
  %4 = call i32 @TRACE(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), %struct.urdev* %3)
  %5 = load %struct.urdev*, %struct.urdev** %2, align 8
  %6 = getelementptr inbounds %struct.urdev, %struct.urdev* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = icmp ne %struct.TYPE_2__* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.urdev*, %struct.urdev** %2, align 8
  %11 = getelementptr inbounds %struct.urdev, %struct.urdev* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @put_device(i32* %13)
  br label %15

15:                                               ; preds = %9, %1
  %16 = load %struct.urdev*, %struct.urdev** %2, align 8
  %17 = call i32 @kfree(%struct.urdev* %16)
  ret void
}

declare dso_local i32 @TRACE(i8*, %struct.urdev*) #1

declare dso_local i32 @put_device(i32*) #1

declare dso_local i32 @kfree(%struct.urdev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
